@@ -1,11 +1,8 @@
 package com.ak.comm.converter;
 
-import java.io.IOException;
-import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Objects;
-import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -13,16 +10,12 @@ import java.util.stream.Stream;
 
 import javax.annotation.Nonnegative;
 import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
 import javax.annotation.OverridingMethodsMustInvokeSuper;
 
-import com.ak.comm.logging.OutputBuilders;
 import com.ak.digitalfilter.DigitalFilter;
 import com.ak.digitalfilter.FilterBuilder;
-import com.ak.util.LineFileCollector;
-import com.ak.util.Strings;
 
-import static com.ak.comm.core.LogUtils.LOG_LEVEL_VALUES;
+import static com.ak.comm.bytes.LogUtils.LOG_LEVEL_VALUES;
 
 public abstract class AbstractConverter<R, V extends Enum<V> & Variable<V>> implements Converter<R, V> {
   @Nonnull
@@ -35,16 +28,14 @@ public abstract class AbstractConverter<R, V extends Enum<V> & Variable<V>> impl
   private final double frequency;
   @Nonnull
   private Stream<int[]> filteredValues = Stream.empty();
-  @Nullable
-  private LineFileCollector fileCollector;
 
   protected AbstractConverter(@Nonnull Class<V> evClass, @Nonnegative double frequency) {
-    this(evClass, frequency, EnumSet.allOf(evClass).stream().map(v -> new int[] {v.ordinal()}).collect(Collectors.toList()));
+    this(evClass, frequency, EnumSet.allOf(evClass).stream().map(v -> new int[] {v.ordinal()}).toList());
   }
 
   AbstractConverter(@Nonnull Class<V> evClass, @Nonnegative double frequency, @Nonnull List<int[]> selectedIndexes) {
     variables = List.copyOf(EnumSet.allOf(evClass));
-    List<DigitalFilter> filters = variables.stream().map(Variable::filter).collect(Collectors.toList());
+    List<DigitalFilter> filters = variables.stream().map(Variable::filter).toList();
 
     digitalFilter = FilterBuilder.parallel(selectedIndexes, filters.toArray(new DigitalFilter[variables.size()]));
     digitalFilter.forEach(ints -> {
@@ -53,16 +44,6 @@ public abstract class AbstractConverter<R, V extends Enum<V> & Variable<V>> impl
             IntStream.iterate(0, operand -> operand + 1).limit(variables.size()).mapToObj(
                 idx -> Variables.toString(variables.get(idx), ints[idx])).collect(Collectors.joining(", "))));
       }
-      try {
-        if (fileCollector == null) {
-          fileCollector = new LineFileCollector(OutputBuilders.build(getClass().getSimpleName()).getPath(), LineFileCollector.Direction.VERTICAL);
-          fileCollector.accept(variables.stream().map(Variables::toName).collect(Collectors.joining(Strings.TAB)));
-        }
-      }
-      catch (IOException e) {
-        Logger.getLogger(getClass().getName()).log(Level.WARNING, e.getMessage(), e);
-      }
-      fileCollector.accept(Arrays.stream(ints).mapToObj(Integer::toString).collect(Collectors.joining(Strings.TAB)));
       filteredValues = Stream.concat(filteredValues, Stream.of(ints));
     });
     this.frequency = frequency * digitalFilter.getFrequencyFactor();
@@ -89,19 +70,8 @@ public abstract class AbstractConverter<R, V extends Enum<V> & Variable<V>> impl
 
   @Override
   @OverridingMethodsMustInvokeSuper
-  public void refresh() {
+  public void refresh(boolean force) {
     digitalFilter.reset();
-    try {
-      if (fileCollector != null) {
-        fileCollector.close();
-      }
-    }
-    catch (IOException e) {
-      Logger.getLogger(getClass().getName()).log(Level.WARNING, e.getMessage(), e);
-    }
-    finally {
-      fileCollector = null;
-    }
   }
 
   @Nonnull
