@@ -7,14 +7,13 @@ import java.util.Collections;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Function;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 
 import com.ak.comm.bytes.BufferFrame;
-import com.ak.comm.core.LogUtils;
+import com.ak.comm.bytes.LogUtils;
 import com.ak.comm.interceptor.BytesInterceptor;
 import com.ak.comm.logging.LogTestUtils;
 import com.ak.util.Strings;
@@ -44,7 +43,7 @@ public class FixedFrameBytesInterceptorTest {
 
     Assert.assertTrue(LogTestUtils.isSubstituteLogLevel(LOGGER, LogUtils.LOG_LEVEL_LEXEMES,
         () -> {
-          Collection<BufferFrame> frames = interceptor.apply(ByteBuffer.wrap(input)).collect(Collectors.toList());
+          Collection<BufferFrame> frames = interceptor.apply(ByteBuffer.wrap(input)).toList();
           Assert.assertEquals(frames, Collections.singleton(testFrame));
         },
         logRecord -> Assert.assertTrue(logRecord.getMessage().endsWith(testFrame.toString()),
