@@ -5,7 +5,6 @@ import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 import javax.measure.Unit;
@@ -35,7 +34,7 @@ public class AperStage4Current1VariableTest {
             5, 0, 0, 0,
             (byte) 0xd0, 0x07, 0, 0},
 
-            new int[] {55442, 3872, 330990, 3872, 1293}},
+            new int[] {55442, 5982, 330990, 5982, 1293}},
     };
   }
 
@@ -55,7 +54,7 @@ public class AperStage4Current1VariableTest {
         }
       }).count();
       if (processed.get()) {
-        Assert.assertEquals(count, 16);
+        Assert.assertEquals(count, 10);
         break;
       }
     }
@@ -71,8 +70,7 @@ public class AperStage4Current1VariableTest {
 
   @Test
   public void testGetUnit() {
-    List<? extends Unit<?>> actual = EnumSet.allOf(AperStage4Current1Variable.class).stream()
-        .map(DependentVariable::getUnit).collect(Collectors.toList());
+    List<? extends Unit<?>> actual = EnumSet.allOf(AperStage4Current1Variable.class).stream().map(DependentVariable::getUnit).toList();
     Assert.assertEquals(actual,
         Arrays.asList(
             MetricPrefix.MILLI(Units.OHM), MetricPrefix.MICRO(Units.VOLT),
@@ -85,8 +83,7 @@ public class AperStage4Current1VariableTest {
 
   @Test
   public void testOptions() {
-    List<Variable.Option> actual = EnumSet.allOf(AperStage4Current1Variable.class).stream()
-        .flatMap(v -> v.options().stream()).collect(Collectors.toList());
+    List<Variable.Option> actual = EnumSet.allOf(AperStage4Current1Variable.class).stream().flatMap(v -> v.options().stream()).toList();
     Assert.assertEquals(actual,
         Arrays.asList(
             Variable.Option.VISIBLE, Variable.Option.VISIBLE,
